<?xml version="1.0"?>
<package format="3">
  <name>md</name>
  <version>0.0.0</version>
  <description>The md package</description>
  <maintainer email="motordriver@nate.com">MDROBOT</maintainer>
  <license>GPL</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>serial</build_depend>
  <!-- <build_depend>rosidl_default_generators</build_depend> -->
  <!-- <build_depend>builtin_interfaces</build_depend> -->

  <!-- Execution dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>serial</exec_depend>
  <!-- <exec_depend>rosidl_default_runtime</exec_depend> -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  
  <!-- Export information -->
  <export>
    <build_type>ament_cmake</build_type>  
  </export>
</package>
